<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tip_10_btn">10%</string>
    <string name="tip_15_btn">15%</string>
    <string name="tip_20_btn">20%</string>
    <string name="tip_amount">Tip is :</string>
    <string name="hint_amount">Enter Amount</string>

</resources>
