<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_10_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="120dp"
        android:onClick="tip10Percent"
        android:text="@string/tip_10_btn" />

    <Button
        android:id="@+id/btn_15_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_10_percent"
        android:layout_alignBottom="@+id/btn_10_percent"
        android:layout_centerHorizontal="true"
        android:onClick="tip15Percent"
        android:text="@string/tip_15_btn" />

    <Button
        android:id="@+id/btn_20_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_15_percent"
        android:layout_alignBottom="@+id/btn_15_percent"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/btn_15_percent"
        android:onClick="tip20Percent"
        android:text="@string/tip_20_btn" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/hint_amount" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvTipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_10_percent"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btn_20_percent"
        android:layout_marginBottom="78dp"
        android:text="@string/tip_amount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
